--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <div id="question">
         <h2>Pytanie</h2>
         <form>
-         
-        <input id="next" type="button" value="Next"></input>
+          <div id="pytania">
+
+          </div>
+          <input id="next" type="button" value="Next"></input>
         
         </form>
       </div>
