--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
       <h1>Rozwiąż quiz!</h1>
       <div id="question">
         <h2>Pytanie</h2>
-        <form>
-
-          <div id="pytania">
-
-          </div>
-          <input id="next" type="button" value="Next"></input>
+        <form id="pytania">
+           
         
 
         </form>
+        <input id="next" type="button" value="Next"></input>
       </div>
 
     </div>
