--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <h1>Rozwiąż quiz!</h1>
       <div id="question">
         <h2>Pytanie</h2>
-        <form id="pytania">
+        <form id="choices">
            
-        
+
 
         </form>
         <input id="next" type="button" value="Next"></input>
+
       </div>
 
     </div>
