Previous question - button and function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         
 
         </form>
+        <input id="prev" type="button" value="Prev"></input>
         <input id="next" type="button" value="Next"></input>
+
       </div>
 
     </div>
